<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAluno">

    <!-- Título do Fragment -->
    <TextView
        android:id="@+id/tvTituloAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_aluno"
		android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo RA -->
    <EditText
        android:id="@+id/editTextRA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ra"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloAluno" />

    <!-- Campo Nome -->
    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRA" />

    <!-- Campo Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNome" />

    <!-- Botões CRUD -->
    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonListar"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <Button
        android:id="@+id/buttonListar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/listar"
        app:layout_constraintStart_toEndOf="@id/buttonSalvar"
        app:layout_constraintEnd_toStartOf="@id/buttonApagar"
        app:layout_constraintTop_toTopOf="@id/buttonSalvar" />

    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/apagar"
        app:layout_constraintStart_toEndOf="@id/buttonListar"
        app:layout_constraintEnd_toStartOf="@id/buttonEditar"
        app:layout_constraintTop_toTopOf="@id/buttonSalvar" />

    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/editar"
        app:layout_constraintStart_toEndOf="@id/buttonApagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonSalvar" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSalvar" />

    <!-- ScrollView com Lista -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBuscar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvListaAnimais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:gravity="center|start"
            android:textAlignment="viewStart"
            android:justificationMode="inter_word" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
