<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAluguel">

    <!-- Título do Fragment -->
    <TextView
        android:id="@+id/tvTituloAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_aluguel"
		android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Spinner Aluno -->
    <Spinner
        android:id="@+id/spAlunos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloAluguel" />

    <!-- Spinner Exemplar -->
    <Spinner
        android:id="@+id/spExemplares"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spAlunos" />

    <!-- Campo Data de Retirada -->
    <EditText
        android:id="@+id/editTextDataRetirada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/data_retirada"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spExemplares" />

    <!-- Campo Data de Devolução -->
    <EditText
        android:id="@+id/editTextDataDevolucao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/data_devolucao"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDataRetirada" />

    <!-- Botões CRUD -->
    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonListar"
        app:layout_constraintTop_toBottomOf="@id/editTextDataDevolucao" />

    <Button
        android:id="@+id/buttonListar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/listar"
        app:layout_constraintStart_toEndOf="@id/buttonSalvar"
        app:layout_constraintEnd_toStartOf="@id/buttonApagar"
        app:layout_constraintTop_toTopOf="@id/buttonSalvar" />

    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/apagar"
        app:layout_constraintStart_toEndOf="@id/buttonListar"
        app:layout_constraintEnd_toStartOf="@id/buttonEditar"
        app:layout_constraintTop_toTopOf="@id/buttonSalvar" />

    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/editar"
        app:layout_constraintStart_toEndOf="@id/buttonApagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonSalvar" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
        android:text="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSalvar" />

    <!-- ScrollView com Lista -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBuscar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvListaAlugueis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:gravity="center|start"
            android:textAlignment="viewStart"
            android:justificationMode="inter_word" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
